--- a/alphavantage_apiproject.ipynb
+++ b/alphavantage_apiproject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbPU9ogCROSuDPAawyTJz8",
+      "authorship_tag": "ABX9TyMGo4tcvu0mMeqfDhsMNIpT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,18 +34,18 @@
       "metadata": {
         "id": "X-iqOn0TkceE"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QRta4cgkSvWh",
-        "outputId": "526abcc2-ad92-4740-faa9-b87ac404c6b4"
+        "outputId": "0e59b520-a2e9-4c5e-98ff-d9e11a97ff4a"
       },
       "outputs": [
         {
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qa6116GvUnx0",
-        "outputId": "45d1b1e8-7e1f-44db-fe01-b7d08a00de78"
+        "outputId": "869080f3-e47e-4dad-c443-90a02d197e9a"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -91,7 +91,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 138
+          "execution_count": 3
         }
       ]
     },
@@ -106,9 +106,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iOFqW4MYVHT3",
-        "outputId": "f08f5a80-2dbd-4049-ce40-709ad4bda39b"
+        "outputId": "c8e56d70-02ce-4b26-c961-b134226e2870"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K_pLMT1lEy1q",
-        "outputId": "3301ffbf-ca9f-4865-dec6-941bd060ad4f"
+        "outputId": "de68556f-f8ef-42cb-8479-b1e724a7261c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +647,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 5
         }
       ]
     },
@@ -661,9 +661,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwpwpE6KEy85",
-        "outputId": "fc0977ec-abda-4d31-fbae-05d1add42a3a"
+        "outputId": "f69e9603-1216-431e-e54c-c22762c88700"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +673,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 141
+          "execution_count": 6
         }
       ]
     },
@@ -687,9 +687,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TUvXBhxRF_DZ",
-        "outputId": "40be74ac-bcfb-483a-ef58-07238472ffb1"
+        "outputId": "4d6a0744-1ff1-4148-9760-524611b79cfe"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 7
         }
       ]
     },
@@ -713,9 +713,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Pe_npu_F_Ho",
-        "outputId": "129acae2-49a6-47b5-9f8f-cfb9425e7a83"
+        "outputId": "ca6a3724-871e-4b05-d69a-a07e5e9a5114"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1224,7 +1224,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 143
+          "execution_count": 8
         }
       ]
     },
@@ -1238,9 +1238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lxkrpCmytuhN",
-        "outputId": "582d807b-ab6d-465e-9e57-63cc914095d8"
+        "outputId": "0b9646b1-edc1-49ba-b986-ffe865e67034"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1250,7 +1250,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 144
+          "execution_count": 9
         }
       ]
     },
@@ -1265,9 +1265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7fHLdT7UiVTI",
-        "outputId": "b6b934de-bbd4-458f-dc5e-c08d4c3de84d"
+        "outputId": "44c3d736-66f5-47d2-dc4b-2bf734248acd"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,9 +1387,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_HyBHZ5DF_LK",
-        "outputId": "5cc87112-abcc-42f0-943e-f323f5332ac7"
+        "outputId": "8636f412-fbcc-443b-e6c9-525e5555cdde"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1403,7 +1403,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 146
+          "execution_count": 11
         }
       ]
     },
@@ -1415,7 +1415,7 @@
       "metadata": {
         "id": "wOjXZD9zcXvE"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1429,9 +1429,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
-        "outputId": "f65847fd-9d81-4a7a-ed0f-be72c498e83a"
+        "outputId": "fc0e51d1-3762-4913-bfee-1b9b15376a32"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,7 +1490,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7754426a-21b0-499d-ae0a-c51660f6145c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5f5d7573-4b94-4255-8209-356a06b041d6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1660,7 +1660,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7754426a-21b0-499d-ae0a-c51660f6145c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f5d7573-4b94-4255-8209-356a06b041d6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1712,12 +1712,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7754426a-21b0-499d-ae0a-c51660f6145c button.colab-df-convert');\n",
+              "        document.querySelector('#df-5f5d7573-4b94-4255-8209-356a06b041d6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7754426a-21b0-499d-ae0a-c51660f6145c');\n",
+              "        const element = document.querySelector('#df-5f5d7573-4b94-4255-8209-356a06b041d6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1737,8 +1737,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a57be69e-a36c-43bf-9b5d-a7d9f0b8e4b3\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a57be69e-a36c-43bf-9b5d-a7d9f0b8e4b3')\"\n",
+              "<div id=\"df-d8d7cb83-cd6a-45f7-96ac-0c9527ab201a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d8d7cb83-cd6a-45f7-96ac-0c9527ab201a')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1789,7 +1789,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a57be69e-a36c-43bf-9b5d-a7d9f0b8e4b3 button');\n",
+              "        document.querySelector('#df-d8d7cb83-cd6a-45f7-96ac-0c9527ab201a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1800,81 +1800,71 @@
             ]
           },
           "metadata": {},
-          "execution_count": 148
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_frame.to_csv('my_frame.csv', index=False)"
+      ],
       "metadata": {
         "id": "M6sSs8dMFfCz"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ls"
+      ],
       "metadata": {
-        "id": "JqhDryQ-FfKe"
+        "id": "JqhDryQ-FfKe",
+        "outputId": "990cc10b-09d6-4b25-c0b9-865fc5d64be6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my_frame.csv  \u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "! cat my_frame.csv"
+      ],
       "metadata": {
-        "id": "CZkPoHy0FfM5"
+        "id": "CZkPoHy0FfM5",
+        "outputId": "afccd7dd-445b-4b68-8e18-23c3361304a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HmuRPZv5FfPQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6D1vTxaJFfRk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VuPZjslVFfUI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "k6dE7gGGFfW2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Z127dEoxFfZi"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2023-08-18 19:55:00,2023-08-18 19:40:00,2023-08-18 19:30:00,2023-08-18 19:20:00,2023-08-18 19:15:00,2023-08-18 19:00:00,2023-08-18 18:55:00,2023-08-18 18:40:00,2023-08-18 18:30:00,2023-08-18 18:25:00,2023-08-18 18:15:00,2023-08-18 17:55:00,2023-08-18 17:50:00,2023-08-18 17:40:00,2023-08-18 17:35:00,2023-08-18 17:30:00,2023-08-18 17:25:00,2023-08-18 17:15:00,2023-08-18 17:00:00,2023-08-18 16:55:00,2023-08-18 16:50:00,2023-08-18 16:45:00,2023-08-18 16:40:00,2023-08-18 16:30:00,2023-08-18 16:25:00,2023-08-18 16:20:00,2023-08-18 16:15:00,2023-08-18 16:10:00,2023-08-18 16:05:00,2023-08-18 16:00:00,2023-08-18 15:55:00,2023-08-18 15:50:00,2023-08-18 15:45:00,2023-08-18 15:40:00,2023-08-18 15:35:00,2023-08-18 15:30:00,2023-08-18 15:25:00,2023-08-18 15:20:00,2023-08-18 15:15:00,2023-08-18 15:10:00,2023-08-18 15:05:00,2023-08-18 15:00:00,2023-08-18 14:55:00,2023-08-18 14:50:00,2023-08-18 14:45:00,2023-08-18 14:40:00,2023-08-18 14:35:00,2023-08-18 14:30:00,2023-08-18 14:25:00,2023-08-18 14:20:00,2023-08-18 14:15:00,2023-08-18 14:10:00,2023-08-18 14:05:00,2023-08-18 14:00:00,2023-08-18 13:55:00,2023-08-18 13:50:00,2023-08-18 13:45:00,2023-08-18 13:40:00,2023-08-18 13:35:00,2023-08-18 13:30:00,2023-08-18 13:25:00,2023-08-18 13:20:00,2023-08-18 13:15:00,2023-08-18 13:10:00,2023-08-18 13:05:00,2023-08-18 13:00:00,2023-08-18 12:55:00,2023-08-18 12:50:00,2023-08-18 12:45:00,2023-08-18 12:40:00,2023-08-18 12:35:00,2023-08-18 12:30:00,2023-08-18 12:25:00,2023-08-18 12:20:00,2023-08-18 12:15:00,2023-08-18 12:10:00,2023-08-18 12:05:00,2023-08-18 12:00:00,2023-08-18 11:55:00,2023-08-18 11:50:00,2023-08-18 11:45:00,2023-08-18 11:40:00,2023-08-18 11:35:00,2023-08-18 11:30:00,2023-08-18 11:25:00,2023-08-18 11:20:00,2023-08-18 11:15:00,2023-08-18 11:10:00,2023-08-18 11:05:00,2023-08-18 11:00:00,2023-08-18 10:55:00,2023-08-18 10:50:00,2023-08-18 10:45:00,2023-08-18 10:40:00,2023-08-18 10:35:00,2023-08-18 10:30:00,2023-08-18 10:25:00,2023-08-18 10:20:00,2023-08-18 10:15:00,2023-08-18 10:10:00\n",
+            "141.4800,141.3000,141.4100,141.4100,141.2800,141.4100,141.5000,141.5000,141.4100,141.2700,141.2700,141.5000,141.2700,141.2700,141.4100,141.4100,141.4100,141.2700,141.2700,141.2700,141.2600,141.2620,141.4100,141.2600,141.3500,140.9640,141.4100,141.4100,141.4100,141.4500,141.4800,141.7750,141.5400,141.4000,141.2900,141.2800,141.2000,141.1500,141.1600,141.1800,141.1300,141.1600,141.2300,141.2900,141.3500,141.3150,141.2800,141.2600,141.2400,141.2800,141.3000,141.3200,141.3350,141.2900,141.2300,141.2700,141.2200,141.1500,141.2500,141.1550,141.0500,141.3000,141.2000,141.3700,141.3600,141.4200,141.4110,141.3800,141.3700,141.3300,141.2550,141.2000,141.2300,141.2220,141.2300,141.2050,141.3400,141.1800,141.1600,141.1660,141.1100,141.0000,141.0600,140.9600,140.8100,140.8610,140.8700,140.8300,140.9500,140.9200,140.8300,140.7400,140.6700,140.5700,140.4700,140.3400,140.6300,140.5600,140.6300,140.6500\n",
+            "141.5000,141.3000,141.4100,141.4100,141.2800,141.4100,141.5000,141.5000,141.4100,141.2700,141.2700,141.5000,141.2700,141.2700,141.4100,141.5000,141.4100,141.2700,141.2700,141.2700,141.4100,141.4100,141.4100,141.2600,141.3500,141.3500,141.4100,141.4100,141.4900,141.4600,141.4900,141.8300,141.7850,141.5700,141.3700,141.3100,141.2900,141.2210,141.1800,141.2300,141.2900,141.1600,141.2600,141.2900,141.3650,141.3550,141.3500,141.3500,141.2800,141.3400,141.3800,141.3500,141.4100,141.3600,141.2900,141.3000,141.3300,141.2100,141.2600,141.2500,141.1600,141.3500,141.3600,141.3700,141.4300,141.4200,141.4500,141.4500,141.3800,141.3900,141.3400,141.2600,141.2600,141.2700,141.2800,141.2400,141.3400,141.3450,141.2000,141.2100,141.1700,141.1300,141.1260,141.0800,140.9350,140.9600,141.0050,140.9200,140.9500,141.0300,140.9150,140.8300,140.7830,140.7000,140.6150,140.5400,140.6400,140.6800,140.6700,140.7050\n",
+            "141.4800,141.3000,141.4100,141.4100,141.2800,141.4100,141.5000,141.5000,141.2700,141.2700,141.2700,141.5000,141.2700,141.2700,141.4100,141.4100,141.3100,141.2700,141.2700,141.2600,141.2600,141.2620,141.4100,141.2600,141.0300,140.9640,140.9200,141.3900,141.4100,141.2500,141.2300,141.4900,141.5400,141.3900,141.2350,141.2000,141.1610,141.1100,141.1200,141.0980,141.1300,141.0600,141.1200,141.1750,141.2700,141.2500,141.2790,141.2600,141.2100,141.1900,141.2200,141.2300,141.3100,141.2400,141.1800,141.2000,141.2000,141.0930,141.1400,141.1400,140.9850,141.0600,141.1800,141.2300,141.3200,141.2800,141.3650,141.3200,141.2500,141.2900,141.2000,141.1700,141.1500,141.1400,141.1800,141.1600,141.1800,141.1200,141.1400,141.1300,141.0400,140.9200,141.0200,140.9100,140.7900,140.8000,140.8100,140.8000,140.8100,140.8900,140.7900,140.6400,140.5400,140.5500,140.3700,140.3100,140.3200,140.5600,140.5200,140.5400\n",
+            "141.5000,141.3000,141.4100,141.4100,141.2800,141.4100,141.5000,141.5000,141.2700,141.2700,141.2700,141.5000,141.2700,141.2700,141.4100,141.4100,141.3100,141.2700,141.2700,141.2600,141.4100,141.4100,141.4100,141.2600,141.0300,141.3500,140.9610,141.3900,141.4900,141.2500,141.4600,141.4900,141.7700,141.5600,141.3700,141.2900,141.2800,141.1900,141.1500,141.1700,141.1700,141.1500,141.1700,141.2600,141.2900,141.3300,141.3100,141.2890,141.2700,141.2500,141.2800,141.3050,141.3400,141.3400,141.2900,141.2400,141.2800,141.2000,141.1500,141.2500,141.1500,141.0780,141.3100,141.2300,141.3500,141.3700,141.4020,141.4200,141.3700,141.3660,141.3300,141.2500,141.1900,141.2010,141.2110,141.2200,141.1800,141.3300,141.1900,141.1650,141.1440,141.1200,141.0200,141.0200,140.9200,140.8500,140.8600,140.8800,140.8200,140.9500,140.9150,140.8300,140.7200,140.6550,140.6000,140.4800,140.3600,140.6400,140.6000,140.6310\n",
+            "94,7,9,6,7,980167,100,20,980667,3,2,3,9,500,1,1434,195,31,1,31,201,2715,184127,201,335,252,2734,980711,7843,2034817,291278,139979,120955,48049,36436,32246,26114,41539,26145,22668,20657,17099,20469,19487,17618,23615,17211,17389,15131,18770,19949,22219,24396,19542,24923,17394,17046,37404,22185,21258,18383,22344,33427,15469,14956,23251,22889,18416,15918,13977,15237,22268,18551,32632,31467,23208,33680,22471,15014,11726,8856,19703,23661,27274,29538,32995,45505,20865,16566,30166,44037,42701,44761,19187,43446,37128,44506,29379,32233,36215\n"
+          ]
+        }
+      ]
     }
   ]
 }
